# training_plan_generator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: audit.yml  build.yml  ci.yml
app/: app.icns  cache.py  cli.py  run_log.py
app/adapters/: base.py  garmin_workout.py
app/connectors/: base.py  garmin.py  registry.py
app/credentials/: base.py  json_file.py  keepass.py  registry.py
app/gui/: app.py  config_store.py
app/models/: parser.py  workout.py
examples/: cycling_intervals.json
templates/: credentials.json  keepass_entry.md  workout_garmin.json
tests/: test_cache.py  test_cli.py  test_run_log.py
tests/adapters/: test_garmin_workout.py
tests/connectors/: test_garmin.py  test_registry.py
tests/credentials/: test_json_file.py  test_keepass.py  test_registry.py
tests/gui/: test_app.py  test_config_store.py
tests/models/: test_parser.py
