[tool.poetry]
name = "training-plan-generator"
version = "0.1.0"
description = "Generate personalized training plans"
authors = ["Denis Chernykh <education03@mail.ru>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.14"
pykeepass = "^4.1.1"
garminconnect = ">=0.2.19"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.12"
pre-commit = "^4.6.0"
mypy = ">=1.20.2,<3.0.0"
commitizen = "^4.13.10"
pytest = "^9.0.3"
pytest-xdist = "^3.8.0"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.1.0"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "C90", # McCabe cyclomatic complexity
    "UP",  # pyupgrade - modernise syntax for target Python version
    "B",   # flake8-bugbear - common bugs and design issues
    "S",   # flake8-bandit - security
    "PTH", # flake8-use-pathlib - prefer pathlib over os.path
    "RUF", # Ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
ignore_missing_imports = true

[tool.coverage.run]
parallel = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-n auto --cov=app --cov-fail-under=90 --cov-report=term-missing"
markers = ["debug: mark test for local debugging and run it in isolation"]
