[project]
name = "training-plan-generator"
version = "0.1.0"
description = "Generate personalized training plans"
authors = [{ name = "Denis Chernykh", email = "education03@mail.ru" }]
requires-python = ">=3.14,<4"
dependencies = [
    "pykeepass>=4.1.1,<5",
    "garminconnect>=0.2.19",
    "pyside6>=6.7,<7",
]

[project.scripts]
training-plan-generator = "app.cli:main"
training-plan-generator-gui = "app.gui.app:main"

[dependency-groups]
dev = [
    "ruff>=0.15.12,<0.16",
    "pre-commit>=4.6.0,<5",
    "mypy>=1.20.2,<3.0.0",
    "commitizen>=4.13.10,<5",
    "pytest>=9.0.3,<10",
    "pytest-xdist>=3.8.0,<4",
    "pytest-asyncio>=1.3.0,<2",
    "pytest-cov>=7.1.0,<8",
    "pytest-qt>=4.4,<5",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["app"]
module-root = ""

# Build the project with uv's backend so its console script (project.scripts) installs under uv.
[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "C90", # McCabe cyclomatic complexity
    "UP",  # pyupgrade - modernise syntax for target Python version
    "B",   # flake8-bugbear - common bugs and design issues
    "S",   # flake8-bandit - security
    "PTH", # flake8-use-pathlib - prefer pathlib over os.path
    "RUF", # Ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
ignore_missing_imports = true

[tool.coverage.run]
parallel = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-n auto --cov=app --cov-fail-under=90 --cov-report=term-missing"
markers = ["debug: mark test for local debugging and run it in isolation"]
